<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cnr_yaml</name>
  <version>1.0.0</version>
  <description>Library to ease the reading of a YAML file</description>
  <maintainer email="nicola.pedrocchi@stiima.cnr.it">feynman</maintainer>
  <license>BSD-3-Clause</license>

  <build_depend>yaml-cpp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
